--- a/x10.apps/RandomAccess/@versions/Makefile
+++ b/x10.apps/RandomAccess/@versions/Makefile
@@ -1,7 +1,7 @@
 #
 # (c) Copyright IBM Corporation 2007
 #
-# $Id: Makefile,v 1.2 2007-06-28 11:25:33 ganeshvb Exp $
+# $Id: Makefile,v 1.3 2007-06-28 13:42:53 ganeshvb Exp $
 # This file is part of X10 Runtime System.
 #
 # Makefile for RandomAccess Benchmarks (C++ Version).
@@ -9,18 +9,8 @@
 
 .SUFFIXES: .cc .cpp .cxx .C .c .h .o .exe
 
+include ../make.def
 
-LIBNAME = x10
-LIBTARGET = lib$(LIBNAME).
-CXX = mpCC_r 
-CC = mpcc_r 
-DEFS =  -DNDEBUG #-DSTATICINIT #-DWARN 
-CXXFLAGS = -q64  -O3 -qarch=pwr5  -qtune=pwr5 -qhot
-CCFLAGS = -q64 -qarch=pwr5 -qtune=pwr5 -O3 -qhot
-INCLUDES = -I. -I../ -I/u/gbikshan/tmp/x10.lib/include -I/u/gbikshan/tmp/x10.backend/x10lang 
-LIBDIRS = 
-LIBS = -L/u/gbikshan/tmp/x10.lib/lib -l$(LIBNAME) -L/u/gbikshan/tmp/x10.backend/x10lang -lx10lang 
-LINKFLAGS =
 RM = rm -f
 RMDIR = rm -r -f 
 
